--- a/facebook.html
+++ b/facebook.html
@@ -15,7 +15,7 @@
   <link href="css/facebook.css" rel="stylesheet">
   <body>
     <!-- Our Facebook layout will go here. -->
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-fixed-top">
       NAVBAR
     </nav>
     <!-- The container for our grid. The outermost grid must be placed within
@@ -33,6 +33,9 @@
          <!-- Main feed: A cell that spans 7 columns -->
          <div class="col-md-7">
            Main Feed
+           <div style="height: 99999px;">
+
+           </div>
          </div>
          <!-- Right sidebar: A cell that spans 3 columns -->
          <div class="col-md-3">
@@ -43,6 +46,7 @@
      <div class="chat-popup">
        CHAT MENU
      </div>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below),
