--- a/facebook.html
+++ b/facebook.html
@@ -15,8 +15,94 @@
   <link href="css/facebook.css" rel="stylesheet">
   <body>
     <!-- Our Facebook layout will go here. -->
-    <nav class="navbar navbar-fixed-top">
-      NAVBAR
+    <nav class="navbar navbar-fixed-top navbar-default">
+      <!-- ".container-fluid" expands to fill the entire browser view's width.
+           ".container" will use the same width as the ".container" in the body,
+           which contains the three columns of content.
+
+           We want ".container" here so the navbar is the same width as the content.
+
+           Confused? Try switching between the two container classes once you have a
+           complete navbar to see the difference. -->
+      <div class="container">
+        <!-- This code is only active when viewing the site on mobile. We will not
+             cover responsive design, but we'll leave this in, as it's part of the
+             example code.-->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                  data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <!-- Use a "home" glyphicon as a logo. -->
+          <a class="navbar-brand" href="#">
+            <!-- This is how you display a glyphicon. -->
+            <span class="glyphicon glyphicon-home"></span>
+          </a>
+        </div>
+
+        <!-- On mobile, this div is hidden by default. The user hits the button
+             in the `navbar-header` to see the content of the div.
+             On desktop, this div is visible all of the time. -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <form class="navbar-form navbar-left" role="search">
+            <!-- Left-aligned items. -->
+            <div class="input-group">
+              <input type="text" class="form-control fb-search" placeholder="Search Facebook">
+              <span class="input-group-btn">
+                <button type="submit" class="btn btn-default">
+                  <span class="glyphicon glyphicon-search"></span>
+                </button>
+              </span>
+            </div>
+          </form>
+          <div class="nav navbar-nav navbar-right">
+  <!-- Right-aligned items -->
+  <div class="btn-toolbar pull-right" role="toolbar">
+    <div class="btn-group" role="group">
+      <button type="button" class="btn btn-default navbar-btn">
+        John
+      </button>
+    </div>
+    <div class="btn-group" role="group">
+      <button type="button" class="btn btn-default navbar-btn">
+        Home
+      </button>
+    </div>
+    <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default navbar-btn">
+          <span class="glyphicon glyphicon-user"></span>
+          <span class="badge">5</span>
+        </button>
+        <button type="button" class="btn btn-default navbar-btn">
+          <span class="glyphicon glyphicon-comment"></span>
+          <span class="badge">1</span>
+        </button>
+        <button type="button" class="btn btn-default navbar-btn">
+          <span class="glyphicon glyphicon-globe"></span>
+          <span class="badge">3</span>
+        </button>
+    </div>
+    <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default navbar-btn">
+          <span class="glyphicon glyphicon-lock"></span>
+        </button>
+        <div class="btn-group" role="group">
+          <button type="button" class="btn btn-default navbar-btn dropdown-toggle"
+                  data-toggle="dropdown">
+                  <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Log out...</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container -->
     </nav>
     <!-- The container for our grid. The outermost grid must be placed within
      a `container` or `container-fluid` class. (Meaning: If you nest a grid
