--- a/facebook.html
+++ b/facebook.html
@@ -114,8 +114,77 @@
        <div class="row">
          <!-- Left sidebar: A cell that spans 2 columns -->
          <div class="col-md-2">
-           Left Sidebar
+           <ul class="nav nav-pills nav-stacked">
+             <li role="presentation"><a href="#">John Vilk</a></li>
+             <li role="presentation">
+               <a href="#"><span class="glyphicon glyphicon-pencil"></span>
+               Edit Profile</a>
+             </li>
+             <!-- List items that are just text are not indented, and look like the
+                  Facebook section labels. -->
+             <li role="presentation">FAVORITES</li>
+             <!-- The class "active" highlights this item in the list -->
+             <li role="presentation" class="active">
+               <a href="#"><span class="glyphicon glyphicon-list-alt"></span>
+               News Feed</a>
+             </li>
+             <!-- We can use badges in pills to add numbers beside them. -->
+             <li role="presentation">
+               <a href="#">
+                 <span class="glyphicon glyphicon-comment"></span> Messages
+                 <span class="badge">7</span>
+               </a>
+             </li>
+             <li role="presentation">
+               <a href="#"><span class="glyphicon glyphicon-calendar"></span>
+               Events</a>
+             </li>
+             <li role="presentation">
+               <a href="#"><span class="glyphicon glyphicon-picture"></span>
+               Photos</a>
+             </li>
+             <li role="presentation">
+               <a href="#"><span class="glyphicon glyphicon-gift"></span>
+               Gifts</a>
+             </li>
+             <!-- "Saved" also has a number beside it. -->
+             <li role="presentation">
+               <a href="#">
+                 <span class="glyphicon glyphicon-bookmark"></span>
+                 Saved
+                 <span class="badge">2</span>
+               </a>
+             </li>
+             <li role="presentation">
+               <a href="#"><span class="glyphicon glyphicon-tags"></span>
+               Sale Groups</a>
+             </li>
+             <li role="presentation">PAGES</li>
+             <li role="presentation">
+               <a href="#"><span class="glyphicon glyphicon-plus"></span>
+               Create Page</a>
+             </li>
+             <li role="presentation">
+               <a href="#"><span class="glyphicon glyphicon-signal"></span>
+               Create Ad</a>
+             </li>
+             <li role="presentation">GROUPS</li>
+             <li role="presentation">
+               <a href="#"><span class="glyphicon glyphicon-plus"></span>
+               Create Group</a>
+             </li>
+             <li role="presentation">
+               <a href="#"><span class="glyphicon glyphicon-user"></span>
+               New Groups</a>
+             </li>
+             <li role="presentation">FRIENDS</li>
+             <li role="presentation">
+               <a href="#"><span class="glyphicon glyphicon-pushpin"></span>
+               Amherst, MA</a>
+             </li>
+           </ul>
          </div>
+
          <!-- Main feed: A cell that spans 7 columns -->
          <div class="col-md-7">
            Main Feed
@@ -125,8 +194,121 @@
          </div>
          <!-- Right sidebar: A cell that spans 3 columns -->
          <div class="col-md-3">
-           Right Sidebar
-         </div>
+           <!-- Nested grid! Like the outer grid, it's just a sequence of rows. -->
+           <!-- Ticker. -->
+           <div class="row">
+             <div class="col-md-12">
+               <a href="#" class="pull-right">
+                 <span class="glyphicon glyphicon-download-alt"></span>
+               </a>
+             </div>
+           </div>
+
+           <!-- Birthday -->
+           <div class="row">
+             <div class="col-md-12">
+               <span class="glyphicon glyphicon-gift"></span>
+               <a href="#">Zak</a> and <a href="#">1 other</a>
+             </div>
+           </div>
+
+           <!-- Trending -->
+           <div class="row">
+             <div class="col-md-12 fb-trending">
+               <div class="row">
+                 <div class="col-md-4 fb-trending-title">
+                   TRENDING
+                 </div>
+                 <div class="col-md-">
+                   <ul class="nav nav-pills pull-right">
+                     <li role="presentation" class="active">
+                       <a href="#"><span class="glyphicon glyphicon-flash"></span></a>
+                     </li>
+                     <li role="presentation"><a href="#">
+                         <span class="glyphicon glyphicon-tower"></span>
+                         </a></li>
+                     <li role="presentation"><a href="#">
+                         <span class="glyphicon glyphicon-sunglasses"></span>
+                         </a></li>
+                     <li role="presentation"><a href="#">
+                         <span class="glyphicon glyphicon-record"></span>
+                         </a></li>
+                     <li role="presentation"><a href="#">
+                         <span class="glyphicon glyphicon-facetime-video"></span>
+                         </a></li>
+                   </ul>
+                 </div>
+               </div>
+               <div class="row">
+                 <div class="col-md-12">
+                   <ul class="media-list">
+                     <li class="media">
+                       <div class="media-left media-top">
+                         <span class="glyphicon glyphicon-flash"></span>
+                       </div>
+                       <div class="media-body">
+                         <a href="#">George Lucas</a>: Filmmaker Criticizes New
+                             "Star Wars" Film and Direction of Franchise Under
+                             Disney
+                       </div>
+                     </li>
+                     <li class="media">
+                       <div class="media-left media-top">
+                         <span class="glyphicon glyphicon-flash"></span>
+                       </div>
+                       <div class="media-body">
+                         <a href="#">Super Smash Bros.</a>: Game Glitch Allows
+                             Players to Control 8 Characters With 1 Controller
+                       </div>
+                     </li>
+                     <li class="media">
+                       <div class="media-left media-top">
+                         <span class="glyphicon glyphicon-flash"></span>
+                       </div>
+                       <div class="media-body">
+                         <a href="#">Tuukka Rask</a>: Boston Bruins Player
+                             Debuts Goalie Mask for Winter Classic
+                       </div>
+                     </li>
+                     <li class="media">
+                       <div class="media-left media-top">
+                         <span class="caret"></span>
+                       </div>
+                       <div class="media-body">
+                         <a href="#">See More</a>
+                       </div>
+                     </li>
+                   </ul>
+                 </div>
+               </div>
+             </div>
+           </div>
+
+           <!-- Suggested Pages -->
+           <div class="row">
+             <div class="col-md-12">
+               <div class="row">
+                 <div class="col-md-8">
+                   SUGGESTED PAGES
+                 </div>
+                 <div class="col-md-4">
+                   <a href="#" class="pull-right">See All</a>
+                 </div>
+               </div>
+               <div class="row">
+                 <div class="col-md-12">
+                   <img src="img/falafel.jpg" width="100%" />
+                   <br><a href="#">Pita Pocket's</a>
+                   <br> Mediterranean Restaurant · 301 likes
+                   <br><button type="button" class="btn btn-default">
+                   <span class="glyphicon glyphicon-thumbs-up">
+                   </span> Like Page</button>
+                 </div>
+               </div>
+             </div>
+           </div>
+
+
        </div>
      </div>
      <div class="chat-popup">
