end of workshop 04

--- a/facebook.html
+++ b/facebook.html
@@ -312,8 +312,25 @@
        </div>
      </div>
      <div class="chat-popup">
-       CHAT MENU
+       <div class="container-fluid">
+         <div class="row">
+           <div class="col-md-8">
+             <span class="green">●</span> Chat (32)
+           </div>
+           <div class="col-md-4">
+             <div class="btn-group pull-right" role="group">
+               <button type="button" class="btn btn-xs">
+                 <span class="glyphicon glyphicon-pencil"></span>
+               </button>
+               <button type="button" class="btn btn-xs">
+                 <span class="glyphicon glyphicon-asterisk"></span>
+               </button>
+             </div>
+           </div>
+         </div>
+       </div>
      </div>
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery.min.js"></script>
